# bachata-beat-story-sync

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  RELEASE_GUIDE.md  all_tests_output.txt  analyze_complexity.py  app_ui.py  build_production.sh  main.py  mcp_config.json  mcp_server.py  montage_config.yaml  mypy.ini  ockham.md  output_story_explain.md  plan.md  plan2.md  progress.txt  pyproject.toml  pyrightconfig.json  pytest_output.txt  refactor_progress.txt  requirements.in  requirements.txt  test_scp.py  todo.md
.Jules/: ockham.md  refactor_progress.txt
.github/: release.yml
.streamlit/: config.toml
demo/: README.md
design/: ui-prototype.html
docs/: CHANGELOG.md  README.md  api-reference.md  architecture.md  audit-report.md  configuration.md  contributing.md  marketing_execution_plan.md  marketing_strategy.md  refactor_strategy.md  security.md  user-guide.md
memory/: MEMORY.md  project_overview.md
output_pipeline/: pipeline_summary.txt
presets/: CONTRIBUTING.md  README.md  template.yaml
scratch/: check_theme.py
scripts/: IMPLEMENTATION.md  QUICKSTART.md  README.md  benchmark.py  benchmark_report.py  example_report.html  example_results.json
src/: __init__.py  cli_utils.py  pipeline.py  shorts_maker.py
tests/: test_app_security.py  test_audio_analyzer.py  test_batch_bridge.py  test_caching_integration.py  test_core.py  test_core_observer.py  test_core_progress.py  test_progress.py  test_reporting.py  test_reporting_charts.py  test_reporting_thumbnail.py  test_simulation.py  (+5 more)
(+569 files in other folders)
